# otel-ingest-pipeline

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: dependencies.cmake
configs/: gateway.yaml  loader.yaml  otel-collector.yaml
configs/grafana/dashboards/: otel-logs-overview.json  otel-metrics-overview.json  otel-traces-overview.json
configs/grafana/provisioning/datasources/: clickhouse.yml
libs/clickhouse_writer/: CMakeLists.txt
libs/clickhouse_writer/include/clickhouse_writer/: clickhouse_writer.h
libs/clickhouse_writer/src/: clickhouse_writer.cpp
libs/jetstream_client/: CMakeLists.txt
libs/jetstream_client/include/jetstream_client/: jetstream_client.h
libs/jetstream_client/src/: jetstream_client.cpp
libs/otlp_decoder/include/otlp_decoder/: decoder.h
libs/otlp_decoder/src/: decoder.cpp
libs/telemetry/src/: tracer.cpp
scripts/: clickhouse_schema.sql
services/clickhouse_loader/: clickhouse_batcher.cpp  main.cpp
services/jetstream-clickhouse-loader/: clickhouse_batcher.h  config.h  main.cpp
services/otlp-gateway/: config.h  grpc_server.cpp  grpc_server.h  main.cpp  runtime.cpp
services/otlp_gateway/: grpc_server.cpp  main.cpp
tests/: CMakeLists.txt  batch_insert_test.cpp  clickhouse_writer_tests.cpp  jetstream_client_init_tests.cpp  otlp_decoder_test.cpp  otlp_decoder_tests.cpp  telemetry_tests.cpp
